--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </label>
 
       <div id="loader">Đang tải...</div>
-      <div id="previewBubble" style="margin-top: 20px;"></div>
+     <!-- <div id="previewBubble" style="margin-top: 20px;"></div>-->
     </form>
   </div>
 
