--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
       <label for="message"><i class="fa-solid fa-comment-dots icon-wrapper"></i>Nội dung:</label>
       <textarea id="message" rows="5" placeholder="Nội dung bạn muốn gửi..." required></textarea>
-
+      <h6><i class="fa fa-bank icon-wrapper"></i>Bank trước khi gửi</h6>
+      <h6>MBBank: 0921174162</h6>
       <button id="sendBtn" type="submit"><i class="fa fa-telegram icon-wrapper"></i>Gửi đến Telegram</button>
       <p><i class="fa fa-send-o icon-wrapper"></i>Số lượt gửi</p>
       <p><i class="fa fa-user-plus icon-wrapper"></i> Số người truy cập</p>
